Stretch Task Added - Fixed Navigation

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -156,9 +156,18 @@ h5 {
   margin: 0 auto;
 }
 
+nav {
+  background: skyblue;
+  top: 0;
+  z-index: 100;
+  position: fixed;
+  width: 876px;
+  margin-left: 20px;
+}
+
 nav a {
   text-decoration: none;
-  color: gray;
+  color: black;
   font-size: 12px;
   margin: 20px;
   margin-bottom: 20px;
@@ -168,13 +177,14 @@ nav a {
 }
 
 .logo {
-  margin-top: 20px;
+  margin-top: 15px;
+  margin-right: 20px;
   float: right;
 }
 
 .below-header {
   display: inline-block;
-  padding-top: 50px;
+  padding-top: 120px;
   box-sizing: border-box;
 }
 
